--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,8 @@
 {
-  "recommendations": ["datagone.vscode-stryker-mutator"]
+    "recommendations": [
+        "ritwickdey.liveserver",
+        "ms-dotnettools.csdevkit",
+        "ms-dotnettools.vscodeintellicode-csharp",
+        "formulahendry.dotnet-test-explorer"
+    ]
 }
